--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ logging.level.org.thymeleaf=DEBUG
 
 spring.messages.basename=languages/message
 spring.messages.encoding=UTF-8
+
+springdoc.enable-native-support=true
+springdoc.swagger-ui.path=/swagger-ui
