--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,14 @@ spring.messages.encoding=UTF-8
 
 springdoc.enable-native-support=true
 springdoc.swagger-ui.path=/swagger-ui
+
+spring.mail.host=smtp.gmail.com
+spring.mail.username=nhattl.work@gmail.com
+spring.mail.port=587
+
+spring.mail.password=edbf shzc myto knfo
+
+spring.mail.protocol=smtp
+spring.mail.test-connection=false
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
